--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
           <img
             src="./assets/hero/Group 39916.svg"
             alt="heroImg"
-            class="mt-[30px] md:hidden"
+            class="mt-[30px]"
           />
-          <img
+          <!-- <img
             src="./assets/hero/Screenshot 2024-07-01 145919 2.svg"
             alt="heroImg2"
-            class="mt-[30px] hidden"
-          />
+            class="mt-[30px] md:hidden w-[100%] h-[100%]"
+          /> -->
         </div>
         <div class="pt-[30px] md:pt-[85px] md:pb-[112px]">
           <div
@@ -223,47 +223,56 @@
       >
         <img src="./assets/hero/Group 39925.svg" alt="logos" />
       </div>
-      <div
-        class="bg-[#FFF] md:flex items-center justify-center 2xl:gap-[170px]"
-      >
-        <div class="md:pb-[90px] px-[20px] md:px-[0px]">
+      <div class="bg-[#FFF] md:flex items-center justify-center 2xl:gap-[120px]">
+        <div class="md:pb-[90px] px-[20px] md:px-[0px] ">
           <h1
             class="hidden md:block text-[#2B2B2B] text-[35px] font-[Poppins] font-bold leading-[70px]"
           >
-            Bienvenue chez votre nouveau <br />partenaire de croissance
+            Bienvenue chez Juka
           </h1>
           <h1
             class="pt-[20px] md:hidden text-[#2B2B2B] text-[28px] font-[Poppins] font-bold leading-[35px]"
           >
-            Bienvenue chez votre nouveau partenaire de croissance
+            Bienvenue chez Juka
           </h1>
           <h1
-            class="hidden md:block mt-[40px] text-[#2B2B2B] text-[20px] font-[Poppins] font-medium leading-[40px]"
+            class="hidden 2xl:block mt-[40px] text-[#2B2B2B] text-[20px] font-[Poppins] font-medium leading-[40px]"
           >
-            Lorem ipsum dolor sit amet consectetur. Dignissim elit sit
-            <br />cras lectus condimentum et porttitor et sed. Mauris ultricies
-            <br />
-            mattis donec mauris et elit congue tincidunt. Sed ac dui
-            <br />ullamcorper gravida. Ac in ullamcorper eu fusce nulla est
-            <br />
-            aliquet.
+            Une équipe d'experts passionnés par les <br> automatisations et les
+            newsletters avec un réel  <br> background dans l'e-commerce.  Nous  mettons<br>
+            toutes nos compétences et  savoir  faire au profit de <br> votre marque
+            pour vous aider à passer au niveau <br> supérieur grâc à des emailse 
+            professionnels qui convertissent <br>couplés à une stratégie éprouvée
+            sur plus de 300 clients...
           </h1>
           <h1
-            class="md:hidden mt-[15px] md:mt-[40px] text-[#2B2B2B] md:text-[20px] font-[Poppins] font-medium leading-[30px]"
+          class="hidden 2xl:hidden md:block mt-[40px] text-[#2B2B2B] text-[20px] font-[Poppins] font-medium leading-[40px] "
+        >
+          Une équipe d'experts passionnés par les  automatisations <br> et les
+          newsletters avec   un réel background dans  l'e-commerce.  Nous mettons
+          toutes nos compétences et  savoir faire au profit de votre marque
+          pour <br> vous aider à passer au niveau supérieur grâce  à des emails
+          professionnels qui convertissent couplés à une stratégie éprouvée
+          sur plus de 300 clients...
+        </h1>
+          <h1
+            class="md:hidden mt-[15px] md:mt-[40px] text-[#2B2B2B] md:text-[20px] font-[Poppins] font-medium leading-[30px] "
           >
-            Lorem ipsum dolor sit amet consectetur. Dignissim elit sit cras
-            lectus condimentum et porttitor et sed. Mauris ultricies mattis
-            donec mauris et elit congue tincidunt. Sed ac dui ullamcorper
-            gravida. Ac in ullamcorper eu fusce nulla est aliquet.
+            Une équipe d'experts passionnés par les automatisations et les
+            newsletters avec un réel background dans l'e-commerce. Nous mettons
+            toutes nos compétences et savoir faire au profit de votre marque
+            pour vous aider à passer au niveau supérieur grâce à des emails
+            professionnels qui convertissent couplés à une stratégie éprouvée
+            sur plus de 300 clients...
           </h1>
         </div>
-        <div class="hidden md:block pt-[40px] md:pt-[102px] md:pb-[93px]">
+        <div class=" md:block pt-[40px] md:pt-[102px] md:pb-[93px]">
           <img src="./assets/hero/Graph.svg" alt="" />
         </div>
-        <div
+        <!-- <div
           class="flex items-center justify-center md:hidden pt-[40px] md:pt-[102px] md:pb-[93px]"
         >
-          <img src="./assets/hero/GraphMobile.svg" alt="" />
+          <img src="./assets/hero/GraphMobile.svg" alt="" /> -->
         </div>
       </div>
     </section>
@@ -271,7 +280,7 @@
       <section class="text-white md:py-10 px-[20px] md:px-6">
         <div class="max-w-4xl mx-auto">
           <h2
-            class="text-2xl md:text-[35px] font-bold mb-4 text-center font-poppins"
+            class="text-2xl md:text-[35px] font-bold mb-4 md:text-center font-poppins text-left "
           >
             La puissance de l’e-mail marketing
           </h2>
@@ -295,7 +304,7 @@
             en acquisition.
           </p>
           <p
-            class="md:block 2xl:hidden md:leading-[40px] md:text-[20px] md:font-medium"
+            class="md:block 2xl:hidden md:leading-[40px] md:text-[20px] md:font-medium text-left"
           >
             En 2024, avec l’explosion des coûts d’acquisition sur toutes les
             plateformes publicitaires,
@@ -312,17 +321,17 @@
       </section>
 
       <div
-        class="px-[20px] md:px-[0px] max-w-4xl mx-auto mt-[25px] md:mt-[0px]"
+        class="px-[10px] md:px-[0px] max-w-4xl mx-auto mt-[25px] md:mt-[0px]"
       >
-        <img src="./assets/mail/mail1.svg" alt="" class="md:w-[1106px]" />
-        <img src="./assets/mail/mail2.svg" alt="" class="md:w-[1106px] md:" />
-        <img src="./assets/mail/mail3.svg" alt="" class="md:w-[1106px] md:" />
-        <img src="./assets/mail/mail4.svg" alt="" class="md:w-[1106px] md:" />
+        <img src="./assets/mail/mail1.svg" alt="" class="w-[100%]" />
+        <img src="./assets/mail/mail2.svg" alt="" class="w-[100%]" />
+        <img src="./assets/mail/mail3.svg" alt="" class="w-[100%]" />
+        <img src="./assets/mail/mail4.svg" alt="" class="w-[100%]" />
       </div>
 
       <div class="mt-[25px] md:mt-[0px] px-[20px] md:px-[0px]">
         <h1
-          class="md:py-[50px] text-2xl text-white md:text-[35px] font-bold mb-4 text-center"
+          class="md:py-[50px] text-2xl text-white md:text-[35px] font-bold mb-4 text-left md:text-center"
         >
           30 - 50 %
         </h1>
@@ -334,7 +343,7 @@
           votre marque 💌
         </p>
         <p
-          class="md:hidden md:text-[20px] md:font-medium text-center text-white"
+          class="md:hidden md:text-[20px] md:font-medium text-left text-white"
         >
           C’est la part de votre chiffre d’affaires globale généré uniquement
           avec les emails si les bonnes stratégies sont appliquées sur votre
@@ -349,7 +358,7 @@
           marque 💌
         </p>
         <h1
-          class="text-2xl text-white md:text-[30px] font-bold mb-[45px] md:mb-[65px] mt-[30px] md:mt-[50px] text-center"
+          class="text-2xl text-white md:text-[30px] font-bold mb-[45px] md:mb-[65px] mt-[30px] md:mt-[50px] text-left md:text-center"
         >
           Le problème de 90% des marques ?
         </h1>
@@ -364,7 +373,7 @@
             emails, vous n’avez pas le temps de <br />concevoir une stratégie
             clair, d’écrire et designer chaque email avant de les planifier…
           </p>
-          <p class="md:hidden mt-[20px] px-[20px] md:text-[20px]">
+          <p class="md:hidden mt-[20px] px-[20px] md:text-[20px] text-left">
             En plus de prendre beaucoup de temps et d’énergie à préparer les
             emails, vous n’avez pas le temps de concevoir une stratégie clair,
             d’écrire et designer chaque email avant de les planifier…
@@ -437,7 +446,7 @@
     <section class="booster mt-[30px] md:mt-[57px] font-[Poppins]">
       <div class="max-w-4xl mx-auto">
         <h2
-          class="text-2xl md:text-[35px] font-bold mb-4 text-center font-poppins f"
+          class="text-2xl md:text-[35px] font-bold mb-4 text-left md:text-center font-poppins px-[20px] "
         >
           Passez au niveau supérieur
         </h2>
@@ -455,7 +464,7 @@
           Cette arme va nous permettre d’agir sur les 3 points essentiel à la
           croissance d’une croissance marque e-commerce :
         </p>
-        <p class="md:hidden md:leading-[40px] md:text-[20px] md:font-medium">
+        <p class="md:hidden md:leading-[40px] md:text-[20px] md:font-medium text-left text-left">
           Lorem ipsum dolor sit amet consectetur. In sit magna sed curabitur.
           Vitae purus massa semper in quis sit vulputate fusce duis. Massa magna
           blandit convallis gravida aenean vel praesent. Cette arme va nous
@@ -463,24 +472,24 @@
           croissance marque e-commerce :
         </p>
       </div>
-      <div class="hidden md:flex justify-center align-middle">
+      <div class=" md:flex justify-center align-middle px-[20px]">
         <img
           src="./assets/booster/Mockup 04 1.svg"
           alt=""
           class="md:w-[1140px]"
         />
       </div>
-      <div class="md:hidden flex items-center justify-center align-middle">
+      <!-- <div class="md:hidden flex items-center justify-center align-middle">
         <img
           src="./assets/booster/Mockup 04 1 2.svg"
           alt=""
-          class="md:w-[1140px]"
+          class="md:w-[100%]"
         />
-      </div>
+      </div> -->
       <div
         class="hidden md:block md:px-[104px] text-center mt-[40px] mb-[50px]"
       >
-        <p class="md:leading-[40px] md:text-[20px] md:font-medium">
+        <p class="md:leading-[40px] md:text-[20px] md:font-medium ">
           <span class="text-orange-500 font-bold"
             >Beaucoup de marques négligent l’email marketing,</span
           >
@@ -515,20 +524,20 @@
           quelle marque ecommerce qui prendra soin de les exploiter :
         </p>
       </div>
-      <div class="hidden md:flex justify-center align-middle">
+      <div class=" md:flex justify-center align-middle">
         <img
           src="./assets/booster/Frame 39895.svg"
           alt=""
           class="md:w-[1325px]"
         />
       </div>
-      <div class="md:hidden flex justify-center align-middle">
+      <!-- <div class="md:hidden flex justify-center align-middle">
         <img
           src="./assets/booster/Group 39881.svg"
           alt=""
           class="md:w-[1325px]"
         />
-      </div>
+      </div> -->
     </section>
     <section class="superieur">
       <div
@@ -835,23 +844,24 @@
                 <h1
                   class="text-[#000] font-[Roboto] font-medium text-[18px] mt-[8px]"
                 >
-                  Best on the market
+                  La Meilleur Agence emailing Ecom Francaise
                 </h1>
                 <h1 class="mt-[8px] font-[Roboto] font-light">
-                  I love this product because the support is great. Please ...
+                  Romain et son équipe ont eu un impact significatif sur
+                  l'évolution des ventes au cours des derniers...
                 </h1>
-                <div class="mt-[8px] mb-[5px]">
+                <!-- <div class="mt-[8px] mb-[5px]">
                   <div class="md:w-[42%] h-px bg-[#000] opacity-[0.2]"></div>
-                </div>
-                <div class="mt-[8px]">
+                </div> -->
+                <!-- <div class="mt-[8px]">
                   <h1 class="font-[Roboto] font-medium text-[18px]">
                     Worldtraveler
                   </h1>
-                </div>
+                </div> -->
               </div>
             </div>
             <div
-              class="hidden md:block p-[20px] bg-[#FFF] w-[280px] h-[220px] rounded-[20px] shadow-[0px_2px_4px_0px_rgb(7,4,146,0.10),0px_24px_60px_0px_rgb(6,47,125,0.05),0px_12px_24px_0px_rgb(27,59,119,0.05)]"
+              class=" md:block p-[20px] bg-[#FFF] w-[280px] h-[220px] rounded-[20px] shadow-[0px_2px_4px_0px_rgb(7,4,146,0.10),0px_24px_60px_0px_rgb(6,47,125,0.05),0px_12px_24px_0px_rgb(27,59,119,0.05)]"
             >
               <div>
                 <div class="flex items-center justify-between">
@@ -871,23 +881,23 @@
                 <h1
                   class="text-[#000] font-[Roboto] font-medium text-[18px] mt-[8px]"
                 >
-                  Best on the market
-                </h1>
+                Equipe professionnelle disponible et réactive                </h1>
                 <h1 class="mt-[8px] font-[Roboto] font-light">
-                  I love this product because the support is great. Please ...
+                  Très ravis et satisfaits de ma collaboration avec l'agence Juka.
+                  Romain est disponible, très à l'écoute ...
                 </h1>
-                <div class="mt-[8px] mb-[5px]">
+                <!-- <div class="mt-[8px] mb-[5px]">
                   <div class="md:w-[42%] h-px bg-[#000] opacity-[0.2]"></div>
                 </div>
                 <div class="mt-[8px]">
                   <h1 class="font-[Roboto] font-medium text-[18px]">
                     Worldtraveler
                   </h1>
-                </div>
+                </div> -->
               </div>
             </div>
             <div
-              class="hidden md:block p-[20px] bg-[#FFF] w-[280px] h-[220px] rounded-[20px] shadow-[0px_2px_4px_0px_rgb(7,4,146,0.10),0px_24px_60px_0px_rgb(6,47,125,0.05),0px_12px_24px_0px_rgb(27,59,119,0.05)]"
+              class=" md:block p-[20px] bg-[#FFF] w-[280px] h-[220px] rounded-[20px] shadow-[0px_2px_4px_0px_rgb(7,4,146,0.10),0px_24px_60px_0px_rgb(6,47,125,0.05),0px_12px_24px_0px_rgb(27,59,119,0.05)]"
             >
               <div>
                 <div class="flex items-center justify-between">
@@ -907,19 +917,18 @@
                 <h1
                   class="text-[#000] font-[Roboto] font-medium text-[18px] mt-[8px]"
                 >
-                  Best on the market
-                </h1>
+                40% de notre CA généré                </h1>
                 <h1 class="mt-[8px] font-[Roboto] font-light">
-                  I love this product because the support is great. Please ...
+                  À l'heure où j'écris ce commentaire, Juka représente 40% de notre CA généré ce mois-ci grâce ...
                 </h1>
-                <div class="mt-[8px] mb-[5px]">
+                <!-- <div class="mt-[8px] mb-[5px]">
                   <div class="md:w-[42%] h-px bg-[#000] opacity-[0.2]"></div>
                 </div>
                 <div class="mt-[8px]">
                   <h1 class="font-[Roboto] font-medium text-[18px]">
                     Worldtraveler
                   </h1>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -972,7 +981,7 @@
           class="flex justify-center md:align-middle gap-[20px] md:gap-[44px]"
         >
           <img
-            src="./assets/qui/Ellipse 26.svg"
+            src="./assets/qui/Group 39928.svg"
             alt=""
             class="w-[50px] md:w-[150px] h-[50px] md:h-[150px]"
           />
@@ -1091,9 +1100,15 @@
                   class="accordion__answer col-span-5 md:col-span-4 mt-[-10px] md:mt-[-40px] font-[Poppins] md:text-[20px] font-medium"
                 >
                   <p class="text-[#747474]">
-                    Ut enim ad minim veniam quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat aute irure
-                    dolor
+                    Nous nous distinguons par notre approche personnalisée de
+                    l'email marketing. Juka donne la priorité à la compréhension
+                    de votre marque, de votre public et de vos objectifs afin de
+                    créer des stratégies personnalisées qui donnent des
+                    résultats tangibles. L'expertise de notre équipe, combinée à
+                    des outils et des logiciels de pointe, permet à vos
+                    campagnes de se démarquer dans des boîtes de réception
+                    généralement surchargées par d’autres emails beaucoup moins
+                    qualitatifs.
                   </p>
                 </div>
               </div>
@@ -1119,9 +1134,11 @@
                   class="accordion__answer col-span-5 md:col-span-4 mt-[-10px] md:mt-[-40px] font-[Poppins] md:text-[20px] font-medium"
                 >
                   <p class="text-[#747474]">
-                    Ut enim ad minim veniam quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat aute irure
-                    dolor
+                    Nous travaillons uniquement avec des marques ecommerce dans
+                    toutes les niches et générant au minimum 10.000€/ mois.
+                    Malgré les demandes dans d’autres secteurs, nous préférons
+                    rester focalisés dans notre zone de génie : l’email
+                    marketing pour les marques e-commerce !
                   </p>
                 </div>
               </div>
@@ -1135,7 +1152,7 @@
                 <h1
                   class="text-[#000] font-[Poppins] md:text-[20px] font-medium col-span-4"
                 >
-                  QCombien de temps dois-je attendre avant de voir des résultats
+                  Combien de temps dois-je attendre avant de voir des résultats
                   ?
                 </h1>
                 <img
@@ -1147,9 +1164,10 @@
                   class="accordion__answer col-span-5 md:col-span-4 mt-[-10px] md:mt-[-40px] font-[Poppins] md:text-[20px] font-medium"
                 >
                   <p class="text-[#747474]">
-                    Ut enim ad minim veniam quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat aute irure
-                    dolor
+                    Vous pouvez commencer à voir des résultats sous 7 jours
+                    après avoir mis en place les différentes séquences
+                    automatisées d’email et l’envoi de la première campagne de
+                    newsletter.
                   </p>
                 </div>
               </div>
@@ -1174,9 +1192,9 @@
                   class="accordion__answer col-span-5 md:col-span-4 mt-[-10px] md:mt-[-40px] font-[Poppins] md:text-[20px] font-medium"
                 >
                   <p class="text-[#747474]">
-                    Ut enim ad minim veniam quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat aute irure
-                    dolor
+                    Si nous n’apportons aucun résultat probant avec nos
+                    stratégies durant les 30 premiers jours de prestation, vous
+                    ne nous payez pas un centime !
                   </p>
                 </div>
               </div>
@@ -1191,7 +1209,7 @@
       >
         <div>
           <h1
-            class="hidden md:block font-[Poppins] font-bold text-[35px] text-[#FFF] text-center"
+            class="hidden md:block font-[Poppins] font-bold text-[35px] text-[#FFF] text-center "
           >
             Soyez prêt à passer à la vitesse supérieur grâce à l’email
             <br />marketing
