--- a/index.html
+++ b/index.html
@@ -973,12 +973,12 @@
     <section class="Qui bg-[#2B2B2B] font-[Poppins] pb-[80px]">
       <div class="mx-auto px-[20px] md:px-[50px] 2xl:px-[0px]">
         <h1
-          class="md:text-[35px] text-[30px] md:font-bold text-center text-white pt-[30px] md:pt-[52px] mb-[42px] md:mb-[76px]"
+          class="md:text-[35px] text-[30px] md:font-bold text-center md:text-center text-white pt-[30px] md:pt-[52px] mb-[42px] md:mb-[76px]"
         >
           Qui suis-je ?
         </h1>
         <div
-          class="flex justify-center md:align-middle gap-[20px] md:gap-[44px]"
+          class=" flex-col md:flex justify-center md:align-middle gap-[20px] md:gap-[44px]"
         >
           <img
             src="./assets/qui/Group 39928.svg"
