--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <img
             src="./assets/hero/Group 39916.svg"
             alt="heroImg"
-            class="mt-[30px]"
+            class=" mt-[30px] w-full h-auto object-cover"
           />
           <!-- <img
             src="./assets/hero/Screenshot 2024-07-01 145919 2.svg"
