--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
           Qui suis-je ?
         </h1>
         <div
-          class=" flex-col md:flex justify-center md:align-middle gap-[20px] md:gap-[44px]"
+          class=" block md:flex md:justify-center md:align-middle gap-[20px] md:gap-[44px]"
         >
           <img
             src="./assets/qui/Group 39928.svg"
