--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
       <div
         class="px-[20px] md:px-[104px] text-center mt-[20px] md:mt-[40px] mb-[50px]"
       >
-        <p
+        <!-- <p
           class="hidden md:block md:leading-[40px] md:text-[20px] md:font-medium"
         >
           Lorem ipsum dolor sit amet consectetur. In sit magna sed curabitur.
@@ -463,14 +463,14 @@
           magna blandit convallis gravida aenean vel praesent. <br />
           Cette arme va nous permettre d’agir sur les 3 points essentiel à la
           croissance d’une croissance marque e-commerce :
-        </p>
-        <p class="md:hidden md:leading-[40px] md:text-[20px] md:font-medium text-left text-left">
+        </p> -->
+        <!-- <p class="md:hidden md:leading-[40px] md:text-[20px] md:font-medium text-left text-left">
           Lorem ipsum dolor sit amet consectetur. In sit magna sed curabitur.
           Vitae purus massa semper in quis sit vulputate fusce duis. Massa magna
           blandit convallis gravida aenean vel praesent. Cette arme va nous
           permettre d’agir sur les 3 points essentiel à la croissance d’une
           croissance marque e-commerce :
-        </p>
+        </p> -->
       </div>
       <div class=" md:flex justify-center align-middle px-[20px]">
         <img
@@ -549,12 +549,12 @@
           >
             Prêt à passer à la vitesse supérieur ?
           </h1>
-          <h1
+          <!-- <h1
             class="mt-[10px] md:mt-[30px] md:text-[20px] font-[Poppins] font-medium text-[#FFF]"
           >
             Lorem ipsum dolor sit amet consectetur. Nam integer hac ipsum
             placerat arcu pharetra.
-          </h1>
+          </h1> -->
         </div>
         <div>
           <button
@@ -756,12 +756,12 @@
           >
             Prêt à passer à la vitesse supérieur ?
           </h1>
-          <h1
+          <!-- <h1
             class="mt-[10px] md:mt-[30px] md:text-[20px] font-[Poppins] font-medium text-[#FFF]"
           >
             Lorem ipsum dolor sit amet consectetur. Nam integer hac ipsum
             placerat arcu pharetra.
-          </h1>
+          </h1> -->
         </div>
         <div>
           <button
