--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
       >
         <div>
           <img
-            src="./assets/nav/logo.svg"
-            alt="logo"
-            class="cursor-pointer w-[100px] md:w-[157.95px] h-[40px] md:h-[60px]"
-          />
+          src="./assets/nav/Plan de travail 1_2@3x copie 2.png"
+          srcset="./assets/nav/Plan de travail 1_2@2x copie 2.png 2x, ./assets/nav/Plan de travail 1_2@3x copie 2.png 3x"
+          alt="logo"
+          class="cursor-pointer w-[100px] md:w-[157.95px] h-[40px] md:h-[60px]"
+        />
+        
         </div>
         <div class="hidden md:flex items-center justify-center gap-[75px]">
           <div
@@ -116,11 +118,11 @@
         class="md:flex items-center justify-center gap-[0px] 2xl:gap-[70px] px-[20px] md:px-[40px] 2xl:px-[0px]"
       >
         <div class="md:hidden flex items-center justify-center">
-          <img
-            src="./assets/hero/Group 39916.svg"
-            alt="heroImg"
-            class=" mt-[30px] w-full h-auto object-cover"
-          />
+         <img
+  src="./assets/hero/hero.svg"
+  alt="heroImg"
+  class="mt-[30px] w-full h-auto object-cover"
+/>
           <!-- <img
             src="./assets/hero/Screenshot 2024-07-01 145919 2.svg"
             alt="heroImg2"
@@ -267,8 +269,13 @@
           </h1>
         </div>
         <div class=" md:block pt-[40px] md:pt-[102px] md:pb-[93px]">
-          <img src="./assets/hero/Graph.svg" alt="" />
-        </div>
+          <img 
+          src="./assets/hero/Mockup 7 AR copie.png" 
+          srcset="./assets/hero/Mockup 7 AR copie@2x.png 2x, ./assets/hero/Mockup 7 AR copie@3x.png 3x" 
+          alt="Description" 
+          class="w-full h-auto object-cover" 
+        />
+                </div>
         <!-- <div
           class="flex items-center justify-center md:hidden pt-[40px] md:pt-[102px] md:pb-[93px]"
         >
