--- a/index.html
+++ b/index.html
@@ -40,15 +40,13 @@
       <div
         class="px-[20px] md:px-[0px] py-[10px] md:py-[22px] flex items-center justify-between md:justify-center md:gap-[420px] 2xl:gap-[580px]"
       >
-        <div>
-          <img
-          src="./assets/nav/Plan de travail 1_2@3x copie 2.png"
-          srcset="./assets/nav/Plan de travail 1_2@2x copie 2.png 2x, ./assets/nav/Plan de travail 1_2@3x copie 2.png 3x"
+      <div class="flex justify-center items-center">
+        <img
+          src="./assets/nav/03.svg"
           alt="logo"
-          class="cursor-pointer w-[100px] md:w-[157.95px] h-[40px] md:h-[60px]"
+          class="cursor-pointer w-[100%] md:w-[218px] h-auto md:h-[83px] object-contain"
         />
-        
-        </div>
+      </div>
         <div class="hidden md:flex items-center justify-center gap-[75px]">
           <div
             class="flex items-center justify-center gap-[32px] font-[Poppins] font-medium text-[18px]"
