--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
   <body>
     <section class="nav">
       <div
-        class="px-[20px] md:px-[0px] py-[10px] md:py-[22px] flex items-center justify-between md:justify-center md:gap-[420px] 2xl:gap-[580px]"
+        class="px-[20px] md:px-[0px] py-[10px] md:py-[22px]  flex items-center justify-between md:justify-center md:gap-[420px] 2xl:gap-[580px]"
       >
       <div class="flex justify-center items-center">
         <img
-          src="./assets/nav/03.svg"
+          src="./assets/nav/04.png"
           alt="logo"
-          class="cursor-pointer w-[100%] md:w-[218px] h-auto md:h-[83px] object-contain"
+          class="cursor-pointer w-[250px] md:w-[120px] h-[120px] md:h-[83px] object-contain 2xl:w-[250px] 2xl:h-[120px]"
         />
       </div>
         <div class="hidden md:flex items-center justify-center gap-[75px]">
@@ -117,7 +117,7 @@
       >
         <div class="md:hidden flex items-center justify-center">
          <img
-  src="./assets/hero/hero.svg"
+  src="./assets/hero/h2.png"
   alt="heroImg"
   class="mt-[30px] w-full h-auto object-cover"
 />
