--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <img
           src="./assets/nav/04.png"
           alt="logo"
-          class="cursor-pointer w-[250px] md:w-[120px] h-[120px] md:h-[83px] object-contain 2xl:w-[250px] 2xl:h-[120px]"
+          class="cursor-pointer w-[180px] md:w-[150px] h-[60px] md:h-[83px] object-contain 2xl:w-[250px] 2xl:h-[120px]"
         />
       </div>
         <div class="hidden md:flex items-center justify-center gap-[75px]">
@@ -268,10 +268,9 @@
         </div>
         <div class=" md:block pt-[40px] md:pt-[102px] md:pb-[93px]">
           <img 
-          src="./assets/hero/Mockup 7 AR copie.png" 
-          srcset="./assets/hero/Mockup 7 AR copie@2x.png 2x, ./assets/hero/Mockup 7 AR copie@3x.png 3x" 
+          src="./assets/hero/Frame 39897.png" 
           alt="Description" 
-          class="w-full h-auto object-cover" 
+          class="md:w-[555px] md:h-[443px]"
         />
                 </div>
         <!-- <div
