--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
           class=" block md:flex md:justify-center md:align-middle gap-[20px] md:gap-[44px]"
         >
           <img
-            src="./assets/qui/Group 39928.svg"
+            src="./assets/qui/Group 39927.png"
             alt=""
             class="w-[50px] md:w-[150px] h-[50px] md:h-[150px]"
           />
